<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="city_name_field">City: %s</string>
    <string name="country_field">Country: %s</string>
    <string name="temp_field">Temp.: %s \u2103</string>
    <string name="wind_speed">Wind Speed: %s M/S</string>
    <string name="weather_icon_description">weather icon</string>
    <string name="add_cities_button">Add my city</string>
    <string name="update_weather_forecast_by_my_location">Update Weather Forecast by My Location</string>
    <string name="dialog_title">Please enter your city\'s name</string>
    <string name="dialog_ok_button">Ok</string>
    <string name="dialog_info">info</string>
    <string name="map_view_tool_bar">"Weather Forecast\'s map"</string>
    <string name="meter_per_second">M/S</string>
    <string name="temp_cell">\u2103</string>

    <string name="intent_city_key">CITY</string>

</resources>
