<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:id="@+id/main">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp" android:id="@+id/itemLayout">
        <TextView
                android:text="@string/city_name_field"
                android:layout_width="100dp"
                android:layout_height="match_parent" android:id="@+id/item_city_name"
                android:textAlignment="viewStart" android:gravity="center"/>
        <TextView
                android:text="@string/country_field"
                android:layout_width="20dp"
                android:layout_height="match_parent" android:id="@+id/item_country" android:layout_weight="1"
                android:textAlignment="viewStart" android:gravity="center"/>
        <TextView
                android:text="@string/temp_field"
                android:layout_width="20dp"
                android:layout_height="match_parent" android:id="@+id/item_temp" android:layout_weight="1"
                android:textAlignment="viewStart" android:gravity="center"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent" app:srcCompat="@drawable/no_connect"
                android:id="@+id/item_weather_icon"
                android:layout_weight="1" android:contentDescription="@string/weather_icon_description"/>
    </LinearLayout>
</LinearLayout>