<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:id="@+id/dialog" android:background="@color/colorPrimary">

    <TextView
            android:text="@string/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/dialog_title" android:textSize="24sp"
            android:textColor="@android:color/black" android:textAlignment="center" android:textStyle="bold"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/dialog_edit_city_name" android:hint="@string/city_name_field"/>
    <Button
            android:text="@string/dialog_ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/dialog_ok_button" android:textSize="18sp"
            android:background="@color/colorPrimaryDark"/>
</LinearLayout>