<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="50dp" android:background="@color/colorPrimary">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/marker_layput"
            android:background="@color/common_google_signin_btn_text_dark_default">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/city_name_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/marker_city"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/temp_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/marker_temp"
                    android:textColor="@android:color/black"/>
        </LinearLayout>
        <ImageView
                android:layout_height="match_parent" app:srcCompat="@drawable/no_connect"
                android:id="@+id/marker_icon_weather"
                android:layout_width="50dp" android:contentDescription="@string/weather_icon_description"/>
    </LinearLayout>
</LinearLayout>